global search: add alt attributes and change display of reset icon, fixes #821
Closes #821

Merge request studip/studip!439

--- a/resources/assets/stylesheets/scss/globalsearch.scss
+++ b/resources/assets/stylesheets/scss/globalsearch.scss
@@ -25,7 +25,7 @@
         transition: opacity $transition-duration;
     }
     &.has-value #globalsearch-clear {
-        opacity: 1;
+        display: inline;
     }
 
     // The actual search input
@@ -286,7 +286,7 @@ html.responsive-display {
         }
 
         #globalsearch-clear {
-            opacity: 1;
+            display: inline;
         }
     }
 }
