--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -2,6 +2,9 @@ body {
     min-height: 100%;
 }
 
+$login-page-margin: 50px;
+$gap-between-boxes: ($login-page-margin / 2);
+
 #main-header {
     grid-column: 1 / 3;
     grid-row: 1 / 1;
@@ -26,11 +29,16 @@ body {
     z-index: -1;
 }
 
+#index,
+#login {
+    #content {
+        padding: $login-page-margin;
+    }
+}
+
 #loginbox {
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
-    margin-left: 50px;
-    margin-top: 50px;
     padding: 20px;
     width: 450px;
 
@@ -91,12 +99,6 @@ body {
 
             a {
                 text-decoration: underline;
-                color: $base-color;
-
-                &:hover, &:focus {
-                    font-size: 1em;
-                    color: $red;
-                }
             }
         }
 
@@ -113,10 +115,14 @@ body {
                 }
             }
         }
-        & > a {
+        > a {
             margin-left: 12px;
         }
     }
+}
+
+#login-plugin-contents {
+    margin-top: $gap-between-boxes;
 }
 
 #index,
@@ -127,7 +133,7 @@ body {
     }
 
     .messagebox {
-        margin: 50px 0 -25px 50px;
+        margin-bottom: $gap-between-boxes;
         width: 418px;
     }
 }
