--- a/resources/assets/stylesheets/scss/globalsearch.scss
+++ b/resources/assets/stylesheets/scss/globalsearch.scss
@@ -25,7 +25,7 @@
         transition: opacity $transition-duration;
     }
     &.has-value #globalsearch-clear {
-        display: inline;
+        opacity: 1;
     }
 
     // The actual search input
@@ -286,7 +286,7 @@ html.responsive-display {
         }
 
         #globalsearch-clear {
-            display: inline;
+            opacity: 1;
         }
     }
 }
