--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -3,7 +3,7 @@ body {
 }
 
 $login-page-margin: 50px;
-$gap-between-boxes: ($login-page-margin / 2);
+$gap-between-boxes: calc($login-page-margin / 2);
 
 #main-header {
     grid-column: 1 / 3;
