--- a/resources/assets/stylesheets/highcontrast.scss
+++ b/resources/assets/stylesheets/highcontrast.scss
@@ -365,6 +365,7 @@ form.default fieldset > legend  {
 section.contentbox header h1 a:before,
 article.studip.toggle > header h1 > a:before,
 article.studip > header h1 > a > img,
+article.studip > header > a > img,
 article.studip > header > nav > a > img {
     filter: brightness(100);
 
