--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -5362,3 +5362,18 @@ w i z a r d  e l e m e n t s
 /* * * * * * * * * * * * * * * * * *
 w i z a r d  e l e m e n t s  e n d
 * * * * * * * * * * * * * * * * * */
+
+
+/* * * * * * * * * * * * * * *
+s h e l f  i t e m s
+* * * * * * * * * * * * * * */
+.cw-unit-items,
+.cw-shared-items {
+    margin-bottom: 10px;
+    h2 {
+        margin-top: 0;
+    }
+}
+/* * * * * * * * * * * * * * * * * *
+s h e l f  i t e m s  e n d 
+* * * * * * * * * * * * * * * * * */
