--- a/resources/assets/stylesheets/scss/questionnaire.scss
+++ b/resources/assets/stylesheets/scss/questionnaire.scss
@@ -34,7 +34,7 @@ $width: 270px;
                     width: 30px;
                     height: 30px;
                     margin-right: 10px;
-                    margin-left: 7px;
+                    margin-left: 15px;
                 }
                 &.active {
                     background-color: $yellow-40;
@@ -78,12 +78,11 @@ $width: 270px;
                 a {
                     display: flex;
                     align-items: center;
-                    .icon {
+                    .icon.type {
                         width: 30px;
                         height: 30px;
                         margin-right: 10px;
                         margin-left: 7px;
-                        cursor: grabbing;
                     }
                 }
 
@@ -114,11 +113,12 @@ $width: 270px;
         }
 
         .dragcolumn {
-            max-width: 8px;
-        }
-
-        .dragarea {
-            cursor: grabbing;
+            max-width: 1px;
+            padding-bottom: 0px;
+            > .dragarea {
+                display: inline-block;
+                height: 27px;
+            }
         }
 
         .input-array {
@@ -147,6 +147,19 @@ $width: 270px;
                 display: inline-flex;
                 align-items: center;
                 justify-items: center;
+            }
+        }
+        .handle {
+            display: inline-block;
+            width: 8px;
+            height: 27px;
+            background-image: url("#{$image-path}/grabber_grey.svg");
+            background-size: 100% auto;
+            background-position: center center;
+            background-repeat: no-repeat;
+            cursor: move;
+            &:hover {
+                background-image: url("#{$image-path}/grabber_black.svg");
             }
         }
     }
