--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -366,9 +366,13 @@ a.ck.ck-button.ck-button_with-text.ck-dropdown__button:not(.ck-disabled):hover {
 }
 
 /* editor */
-.ck-source-editing-area,
+$editor-min-height: 8em;
+
+.ck-source-editing-area {
+    min-height: calc($editor-min-height + 2px);
+}
 .ck-editor__editable_inline {
-    min-height: 8em;
+    min-height: $editor-min-height;
 }
 
 form.default label:not(.undecorated):not(.ck-voice-label) .ck-source-editing-area textarea {
@@ -382,7 +386,6 @@ form.default .ck-source-editing-area textarea {
 /* forum fixes */
 #forum .ck-source-editing-area textarea {
     height: 100%;
-    min-height: 8em;
 }
 
 #forum .ck form {
