remove useless whitespace, closes #2340
Closes #2340

Merge request studip/studip!1530

--- a/resources/assets/stylesheets/scss/article.scss
+++ b/resources/assets/stylesheets/scss/article.scss
@@ -81,6 +81,13 @@ article.studip {
         }
     }
 
+    &.empty {
+        > header {
+            margin-bottom: 0;
+        }
+        padding-bottom: 0;
+    }
+
     &.toggle {
         > header {
             h1 > a {
