--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -307,7 +307,7 @@ select.sidebar-selectlist {
 
                 input[type=text] {
                     box-sizing: border-box;
-                    border: 1px solid $base-color-60;
+                    border: 1px solid $dark-gray-color-30;
                     border-right: none;
                     flex: 1;
                     padding: .375rem .75rem;
@@ -316,7 +316,7 @@ select.sidebar-selectlist {
 
                 .submit-search {
                     background-color: $content-color-20;
-                    border: 1px solid $base-color-60;
+                    border: 1px solid $dark-gray-color-30;
                     border-left-color: $light-gray-color-40;
                     border-radius: 0;
                     color: transparent;
