Offene Tickets der responsiven Ansicht
Closes #2038, #2039, #2040, #2098, #2124, #2150, #2151, #2152, #2319, #2321, #2324, #2329, #2331, and #2357

Merge request studip/studip!1527

--- a/resources/assets/stylesheets/scss/contentbar.scss
+++ b/resources/assets/stylesheets/scss/contentbar.scss
@@ -4,20 +4,19 @@
     display: flex;
     flex-wrap: wrap;
     height: auto;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-bottom: 15px;
     min-height: 30px;
-    padding: 1em;
+    padding: 1em 2em;
+
+    .contentbar-nav {
+        display: flex;
+        width: auto;
+    }
 
     .contentbar-wrapper-left {
         display: flex;
         flex: auto;
-        /* Taken from courseware.scss line 323 */
-        max-width: calc(100% - 106px);
-
-        .contentbar-nav {
-            display: flex;
-        }
 
         .contentbar-breadcrumb {
             display: flex;
