adjust cursor to text for ckeditor, fixes #1528
Closes #1528

Merge request studip/studip!1562

--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -372,6 +372,7 @@ $editor-min-height: 8em;
     min-height: calc($editor-min-height + 2px);
 }
 .ck-editor__editable_inline {
+    cursor: text;
     min-height: $editor-min-height;
 }
 
