--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -102,6 +102,7 @@
 @import "scss/user-administration";
 @import "scss/wiki";
 @import "scss/multi_person_search";
+@import "scss/vue-select";
 
 
 // Class for DOM elements that should only be visible to Screen readers
