remove bogus font-size setting, fixes #2140
Closes #2140

Merge request studip/studip!1564

--- a/resources/assets/stylesheets/scss/contents.scss
+++ b/resources/assets/stylesheets/scss/contents.scss
@@ -22,7 +22,7 @@
 
                 .content-item-text {
                     .content-item-title {
-                        font-size: 1.8rem;
+                        font-size: larger;
                         margin-bottom: 5px;
                     }
 
@@ -65,7 +65,7 @@
             .content-item-text {
                 .content-item-title {
                     color: $base-color;
-                    font-size: 2rem;
+                    font-size: 1.3em;
                     width: 100%;
                     max-width: 160px;
                     white-space: nowrap;
