--- a/resources/assets/stylesheets/scss/dashboard.scss
+++ b/resources/assets/stylesheets/scss/dashboard.scss
@@ -132,7 +132,7 @@ form div.files-search {
             display: block;
             width: 1%;
             line-height: 1.5;
-            padding: .375rem .75rem;
+            padding: .25em .5em;
             margin: 0;
         }
 
