--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -310,7 +310,7 @@ select.sidebar-selectlist {
                     border: 1px solid $dark-gray-color-30;
                     border-right: none;
                     flex: 1;
-                    padding: .375rem .75rem;
+                    padding: .25em .5em;
                     width: 100%;
                 }
 
