--- a/resources/assets/stylesheets/scss/oauth2.scss
+++ b/resources/assets/stylesheets/scss/oauth2.scss
@@ -11,13 +11,15 @@ article.admin-oauth2--setup {
 
     font-size: 16px;
 
-    #sidebar, #main-footer {
+    #sidebar,
+    #main-footer {
         display: none;
     }
 
-    .scopes, .buttons {
-        margin-top: 2rem;
-        margin-bottom: 2rem;
+    .scopes,
+    .buttons {
+        margin-top: 1em;
+        margin-bottom: 1em;
     }
 
     .buttons {
