--- a/resources/assets/stylesheets/scss/questionnaire.scss
+++ b/resources/assets/stylesheets/scss/questionnaire.scss
@@ -280,7 +280,7 @@ $width: 270px;
     .ct-label {
         color: rgba(0, 0, 0, 0.8);
         text-shadow: -1px 0px $white, 0px 1px $white, 1px 0px $white, 0px -1px $white;
-        font-size: 1rem;
+        font-size: x-small;
         fill: $black;
     }
 
