Probleme mit CKE5 in Dialogen
Closes #1902 and #1682

Merge request studip/studip!1568

--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -397,3 +397,12 @@ form.default .ck-source-editing-area textarea {
 .ck.ck-toolbar > .ck-toolbar__items {
     max-width: calc(100% - 20px);
 }
+
+.studip-dialog {
+    .ck-editor {
+        overflow: hidden;
+        .ck.ck-editor__main > .ck-editor__editable {
+            height: 200px;
+        }
+    }
+}
