drop unused(?) position property, add bottom margin, fixes #2378 and #2247
Closes #2378 and #2247

Merge request studip/studip!1582

--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -161,7 +161,7 @@ body {
     grid-row: 2 / 3;
     justify-content: flex-start;
     margin: $page-margin;
-    position: relative;
+    margin-bottom: calc($page-margin + 35px);
     vertical-align: top;
 
     .oversized & {
