implement PageLayout::disableSidebar() and PageLayout::disableFooter.php, fixes #2395
Closes #2395

Merge request studip/studip!1585

--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -167,6 +167,10 @@ body {
     .oversized & {
         overflow: visible;
     }
+
+    .no-sidebar & {
+        grid-column: 1 / 3;
+    }
 }
 
 #content {
