use different icons for different states, fixes #2414
Closes #2414

Merge request studip/studip!1608

--- a/resources/assets/stylesheets/scss/admin.scss
+++ b/resources/assets/stylesheets/scss/admin.scss
@@ -138,13 +138,13 @@ fieldset.attribute_table {
     }
 
     td .course-completion {
-        @include background-icon(radiobutton-checked, status-red);
+        @include background-icon(span-empty, status-red);
 
         &[data-course-completion="1"] {
-            @include background-icon(radiobutton-checked, status-yellow);
+            @include background-icon(span-2quarter, status-yellow);
         }
         &[data-course-completion="2"] {
-            @include background-icon(radiobutton-checked, status-green);
+            @include background-icon(span-full, status-green);
         }
 
         &.ajaxing {
