replace margin with padding, re #2312, re #2390
Merge request studip/studip!1610

--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -167,9 +167,9 @@ body {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     justify-content: flex-start;
-    margin: $page-margin;
-    margin-bottom: calc($page-margin + 35px);
     overflow-x: auto;
+    padding: $page-margin;
+    padding-bottom: calc($page-margin + 35px);
     vertical-align: top;
 
     .oversized & {
