--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -95,6 +95,10 @@ form.default {
             display: block;
             margin-top: 0.5ex;
         }
+
+        .ck-editor {
+            text-indent: initial;
+        }
     }
 
     .formpart {
