Resolve "Responsive Navigation: Aufklappen der Sidebar erfordert Scrollen an den Seitenanfang"
Closes #2360, #2337, #2318, and #2152

Merge request studip/studip!1587

--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -2,11 +2,14 @@
     background: $white;
     border-left: 0;
     display: inline-block;
+    height: max-content;
+    margin-bottom: $page-margin + 35px;
     margin-top: 15px;
     padding: 0 5px 7px 15px;
     position: sticky;
     text-align: left;
     top: 50px;
+    width: $sidebar-width;
     z-index: 2;
 
     .sidebar-image {
