--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -261,8 +261,10 @@ $sidebarOut: -330px;
     }
 }
 
-.cw-ribbon-button-zoom {
-    display: none;
+#responsive-contentbar-container {
+    position: fixed;
+    width: 100vw;
+    z-index: 1000;
 }
 
 .responsive-display,
@@ -314,8 +316,11 @@ $sidebarOut: -330px;
     #sidebar {
         background-color: $white;
         max-height: calc(100vh - 100px);
+        left: 15px;
         position: absolute;
+        top: 116px;
         transform: translateX($sidebarOut);
+        visibility: hidden;
         z-index: 100;
 
         &.responsive-hide {
@@ -328,10 +333,9 @@ $sidebarOut: -330px;
             @media not prefers-reduced-motion {
                 animation: slide-in $transition-duration forwards;
             }
-
-            left: 15px;
-            position: relative;
-            top: 60px;
+            position: sticky;
+            top: 100px;
+            visibility: visible;
         }
 
         .sidebar-image {
@@ -347,6 +351,9 @@ $sidebarOut: -330px;
         }
 
         @keyframes slide-in {
+            0% {
+                transform: translateX($sidebarOut);
+            }
             100% {
                 transform: translateX($sidebarIn);
             }
@@ -374,6 +381,7 @@ $sidebarOut: -330px;
     }
 
     #content-wrapper {
+        margin-top: 65px;
         width: calc(100vw - 2 * $page-margin);
     }
 
@@ -387,7 +395,6 @@ $sidebarOut: -330px;
         justify-content: stretch;
         margin-bottom: 15px;
         padding-bottom: 0.5em;
-        padding-left: 5px;
 
         .contentbar-nav,
         .cw-ribbon-nav {
@@ -441,7 +448,7 @@ $sidebarOut: -330px;
         }
 
         > .contentbar-wrapper-right {
-            flex: 1;
+            flex: 0;
             left: 5px;
             position: relative;
 
@@ -489,6 +496,7 @@ $sidebarOut: -330px;
     }
 
     #toc {
+        max-width: 100vw;
         position: absolute;
         right: -8px;
         top: -21px;
@@ -550,6 +558,7 @@ $sidebarOut: -330px;
     #sidebar {
         height: 100%;
         position: fixed;
+        top: 75px;
         transform: translateX($sidebarOut);
         -webkit-transform: translateX($sidebarOut);
         top: 80px;
@@ -613,12 +622,6 @@ $sidebarOut: -330px;
             display: none;
         }
 
-        #responsive-contentbar-container {
-            position: fixed;
-            width: 100vw;
-            z-index: 1000;
-        }
-
         #responsive-contentbar {
             padding-left: 15px;
 
@@ -626,10 +629,6 @@ $sidebarOut: -330px;
             .cw-ribbon-nav {
                 margin-left: -8px;
             }
-        }
-
-        #sidebar.responsive-hide {
-            top: 110px;
         }
 
         #content-wrapper {
