apply textarea max-width to ckeditor, fixes #1527
Closes #1527

Merge request studip/studip!1667

--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -70,6 +70,10 @@ form.default {
         }
     }
 
+    textarea:not(.size-l) + .ck-editor {
+        max-width: $max-width-m;
+    }
+
     .quicksearch_container {
         max-width: $max-width-m;
     }
