fix centering of installation assistent, fixes #2550
Closes #2550

Merge request studip/studip!1723

--- a/resources/assets/stylesheets/scss/installer.scss
+++ b/resources/assets/stylesheets/scss/installer.scss
@@ -1,5 +1,10 @@
 @import "../mixins/colors.scss";
 
+body#install {
+    grid-template-columns: auto;
+    justify-content: center;
+}
+
 .stage {
     $image-path: '../images/';
     $icon-path: '#{$image-path}icons/';
