introduce datepicker/datetimepicker 'disable_holidays: true' to disable holidays in the calendar, fixes #2267
Closes #2267

Merge request studip/studip!1632

--- a/resources/assets/stylesheets/studip-jquery-ui.less
+++ b/resources/assets/stylesheets/studip-jquery-ui.less
@@ -176,3 +176,10 @@
 .ui-menu .ui-menu-item {
     list-style: none;
 }
+
+.ui-datepicker-calendar {
+    // This will reenable the tooltip
+    .ui-datepicker-unselectable.ui-datepicker-is-locked {
+        pointer-events: all;
+    }
+}
