--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -260,6 +260,18 @@ a.ck.ck-button.ck-button_with-text.ck-dropdown__button:not(.ck-disabled):hover {
     border: 1px solid var(--dark-gray-color-60);
 }
 
+/* table */
+.ck-content .table {
+    margin: 0.9em auto;
+}
+.ck-content .table {
+    margin: 0.9em auto;
+
+    &:not([style]) {
+        margin-inline-start: 0;
+    }
+}
+
 /* StudipWikiLink plugin */
 .ck.ck-studip-wiki-link-form {
     max-width: 100%;
