--- a/resources/assets/stylesheets/scss/typography.scss
+++ b/resources/assets/stylesheets/scss/typography.scss
@@ -69,7 +69,7 @@ h1, h2 {
 
 h1 {
   margin-top: 0;
-  span {
+  span:not([style]) {
     display: block;
     font-size: calc($font-size-h1 * 0.75);
     font-weight: calc($headings-font-weight / 7);
