recolor icons via css, fixes #2629
Closes #2629

Merge request studip/studip!1780

--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -242,8 +242,11 @@ $sidebarOut: -330px;
 
         img,
         svg {
-            vertical-align: text-bottom;
+            &:not(.avatar) {
+                filter: contrast(0) brightness(2);
+            }
             margin-right: 10px;
+            vertical-align: text-bottom;
         }
 
     }
