--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -39,6 +39,7 @@
 @import "scss/dashboard";
 @import "scss/dialog";
 @import "scss/documents";
+@import "scss/drag-handle";
 @import "scss/enrolment";
 @import "scss/evaluation";
 @import "scss/files";
