--- a/resources/assets/stylesheets/scss/mvv.scss
+++ b/resources/assets/stylesheets/scss/mvv.scss
@@ -148,9 +148,7 @@ table {
                 &.empty {
                     padding-left: 30px;
                 }
-                background: $white url("#{$image-path}/anfasser_24.png") no-repeat left center;
-                cursor: move;
-                padding-left: 10px;
+                @extend .drag-handle;
             }
         }
 
@@ -318,18 +316,11 @@ ul {
         li {
             border-bottom: solid $dark-gray-color-45 1px;
             padding-top: 5px;
-            padding-left: 5px;
+            padding-left: 12px;
             margin-bottom: 5px;
             margin-left: 0;
             display: flex;
             flex-wrap: wrap;
-
-            &.sort_items {
-                background: $white url("#{$image-path}/anfasser_24.png") no-repeat left center;
-                cursor: move;
-                padding-left: 10px;
-            }
-
         }
 
         &.ui-autocomplete {
