make ckeditor resizable, re #2525
Merge request studip/studip!1712

--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -400,8 +400,9 @@ form.default .ck-source-editing-area textarea {
 .studip-dialog {
     .ck-editor {
         overflow: hidden;
-        .ck.ck-editor__main > .ck-editor__editable {
+        .ck-editor__editable_inline {
             height: 200px;
+            resize: vertical;
         }
     }
 }
