--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -4800,13 +4800,14 @@ cw tiles
             background: none;
 
             progress {
+                appearance: none;
                 display: block;
                 width: 100%;
                 height: 3px;
                 margin: 0;
                 border: none;
                 background: rgba(0,0,0,0.3);
-                &:-webkit-progress-bar {
+                &::-webkit-progress-bar {
                     background:  rgba(0,0,0,0.3);
                 }
                 &::-webkit-progress-value {
