resurrect article.studip layout and refine wiki layout (also introduce article...
Closes #2417

Merge request studip/studip!1806

--- a/resources/assets/stylesheets/scss/wiki.scss
+++ b/resources/assets/stylesheets/scss/wiki.scss
@@ -131,3 +131,11 @@ $authors: (
         background-color: $bgcolor;
     }
 }
+
+article.studip.wiki {
+    border: 0;
+
+    > footer {
+        margin: 0;
+    }
+}
