--- a/resources/assets/stylesheets/scss/article.scss
+++ b/resources/assets/stylesheets/scss/article.scss
@@ -1,14 +1,11 @@
+$article-padding: 10px;
+
 article.studip {
+    border: 1px solid $content-color-40;
 
-    &:not(.wiki) {
-        border-color: $content-color-40;
-        border-style: solid;
-        border-width: 1px;
-    }
-
-    margin-bottom: 10px;
+    margin-bottom: $article-padding;
+    padding: $article-padding;
     transition: all 300ms ease 0s;
-    padding: 10px;
 
     &:last-child {
         margin-bottom: 0;
@@ -22,8 +19,8 @@ article.studip {
 
         padding: 2px;
         background-color: $content-color-20;
-        margin: -10px;
-        margin-bottom: 10px;
+        margin: -$article-padding;
+        margin-bottom: $article-padding;
 
         > * {
             /* Try to get header aligned by forcing children into centering */
@@ -99,7 +96,7 @@ article.studip {
                 }
                 width: 100%;
             }
-            margin-bottom: -10px;
+            margin-bottom: -$article-padding;
 
             > *:first-child {
                 cursor: pointer;
@@ -116,16 +113,16 @@ article.studip {
                         transform: rotate(90deg);
                     }
                 }
-                margin-bottom: 10px;
+                margin-bottom: $article-padding;
             }
         }
     }
 
     > footer {
         text-align: center;
-        border-color: $content-color-40;
-        border-top-style: solid;
-        border-width: 1px;
+        border-top: 1px solid $content-color-40;
+        margin: -$article-padding;
+        margin-top: $article-padding;
 
         &:empty {
             display: none !important;
