Resolve "Schönheitskorrekturen am alten Editor"
Closes #2633

Merge request studip/studip!1787

--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -205,7 +205,8 @@ div.overdiv {
             display: inline-block;
             height: 1.4em;
             line-height: 1.4;
-            padding: 0.4em 1em;
+            padding-top: 6px;
+            padding-bottom: 6px;
 
             &:hover {
                 background-color: @base-color-60;
