--- a/resources/assets/stylesheets/scss/i18n.scss
+++ b/resources/assets/stylesheets/scss/i18n.scss
@@ -3,16 +3,14 @@ div.i18n_group {
     position: relative;
 
     > select.i18n {
-        border: 0;
-        border-right: 1px solid $light-gray-color-40;
-        border-bottom: 1px solid $light-gray-color-40;
+        border: 1px solid $light-gray-color-40;
         border-radius: 0;
         box-sizing: border-box;
         margin: 0 !important;
         position: absolute;
-        top: 1px;
-        left: 1px;
-        height: 31px;
+        top: 0px;
+        left: 0px;
+        height: 32px;
         overflow: hidden;
         max-width: $max-width;
 
@@ -33,6 +31,15 @@ div.i18n_group {
     > div.i18n {
         input[type=text], > textarea, .editor_toolbar .buttons, .ck-toolbar {
             padding-left: ($max-width + 6px) !important;
+        }
+
+        > div.editor_toolbar {
+            > div.buttons {
+                height: 31px;
+            }
+            > textarea {
+                margin-top: 0;
+            }
         }
     }
 }
