restore forum column width, switch hover color to blue, re #2469
Merge request studip/studip!1818

--- a/resources/assets/stylesheets/scss/drag-handle.scss
+++ b/resources/assets/stylesheets/scss/drag-handle.scss
@@ -7,7 +7,7 @@
     padding-left: 12px;
 
     &:hover {
-        background-image: url("#{$image-path}/grabber_black.svg");
+        background-image: url("#{$image-path}/grabber_blue.svg");
     }
     &.darkbackground:hover {
         background-image: url("#{$image-path}/grabber_white.svg");
